[package]
name = "ultra-real-worker-edge-oqb"
version = "0.1.0"
edition = "2021"
description = "Cloud-native service with auto-scaling capabilities"
license = "MIT"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
